# phasar

./: .gitignore  CMakeLists.txt  cmake_config.sh
config/: phasar-source-sink-function.json
include/phasar/PhasarLLVM/DataFlowSolver/IfdsIde/: LLVMZeroValue.h
include/phasar/PhasarLLVM/Pointer/: LLVMPointsToGraph.h
include/phasar/UntrustedPass/: FixApiLinkagePass.h  UntrustedPass.h
lib/: CMakeLists.txt
lib/PhasarLLVM/DataFlowSolver/IfdsIde/IFDSFieldSensTaintAnalysis/Utils/: DataFlowUtils.cpp
lib/PhasarLLVM/Pointer/: LLVMPointsToGraph.cpp
lib/UntrustedPass/: CMakeLists.txt  FixApiLinkage.cpp  UntrustedPass.cpp
lib/Utils/: LLVMShorthands.cpp
tools/: CMakeLists.txt
tools/boomerang/: CMakeLists.txt
tools/phasar-clang/: CMakeLists.txt
tools/phasar-llvm/: CMakeLists.txt
tools/pointer-reachability/: CMakeLists.txt  pointer_reachability.cpp
