add_subdirectory(PhasarLLVM)
add_subdirectory(PhasarPass)
add_subdirectory(UntrustedPass)
add_subdirectory(PhasarClang)
add_subdirectory(DB)
add_subdirectory(Config)
add_subdirectory(Experimental)
add_subdirectory(Utils)
add_subdirectory(Controller)

message("Checking Boost_LIBRARIES")
message("${Boost_LIBRARIES}")
